# civilization-lab-gpt-5.2

./: .gitignore  README.md  pyproject.toml
docs/: empirical-validation.md  research-framework.md  restart-checkpoint-2026-03-27.md  roadmap.md  system-architecture.md  technology-decision.md
scenarios/: empirical_kenya_ethiopia.json  two_country_rivalry.json
scripts/: resume-dashboard.ps1
src/civlab/: __init__.py  cli.py
src/civlab/data/: __init__.py  catalog.py  io.py  models.py  normalize.py  pipeline.py  registry.py  schema.py  world_bank_api.py
src/civlab/data/sources/: __init__.py  aiddata.py  base.py  qog.py  ucdp.py  world_bank.py
src/civlab/sim/: __init__.py  bootstrap.py  engine.py  models.py  policies.py  scenario.py
src/civlab/web/: __init__.py  manifest.py  server.py
web/: app.js  index.html  styles.css
