[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "civlab"
version = "0.1.0"
description = "World civilization simulator planning and empirical data scaffolding."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI GPT-5.2" }
]
dependencies = []

[project.scripts]
civlab = "civlab.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

